M       html/vbm12.html
M       vbm12.m

Solved issue with missing function for longitduinal data in vbm12.m.

------------------------------------------------------------------------
r658 | gaser | 2014-11-25 11:46:03

M       CHANGES.txt
M       cg_vbm_write.m
M       html/vbm12.html

Replaced additional opt.print flag in cg_vbm_write.m by general vbm.print.

------------------------------------------------------------------------
r659 | gaser | 2014-11-25 15:26:44

M       CHANGES.txt
M       cg_vbm_run_job.m
M       html/vbm12_instruction_PP.html
 M      templates_1.50mm
M       vbm_plot_boxplot.m
!       vbm_tst_pre.m
D       vbm_tst_reduceRes.m

(1)  Corrected affine registration error.
------------------------------------------------------------------------
r660 | dahnke | 2014-11-25 21:08:42

M       CHANGES.txt
M       cg_vbm_tools.m
M       html/vbm12.html
M       html/vbm12_ackknowledgement.html
M       html/vbm12_instruction.html
M       html/vbm12_instruction_PP.html
M       html/vbm12_introduction.html
M       html/vbm12_methods_SBM.html
A       html/vbm12_starting.html
M       html/vbm12_stuff.html
M       vbm12.fig
M       vbm12.m

(1) Updated GUI and added some more functionality.
(2) Updated html-documentation and added quick starting guide.

------------------------------------------------------------------------
r661 | gaser | 2014-12-03 10:51:19

M       CHANGES.txt
M       cg_vbm_defs.m
M       cg_vbm_longitudinal.m
M       cg_vbm_tools.m
M       html/vbm12.html
M       tbx_cfg_vbm.m
M       vbm_vol_partvol.m

(1) Added modulation option for non-linear only to cg_vbm_defs.m.
(2) Replaced spm_def2det in cg_vbm_defs.m by spm_diffeo.
(3) Always use "No" instead of "None" in tbx_cfg_vbm
(4) Corrected captials and some output in vbm_vol_partitions.m.
(5) Always write modulated data non-linear-only in cg_vbm_longitudinal.m.


------------------------------------------------------------------------
r662 | gaser | 2014-12-03 13:05:38